--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "webpack --mode production --output-public-path agroworks && gh-pages -d dist"
   },
   "author": "freeCodeCamp Manila",
   "license": "MIT",
